--- a/css-box-model/styles.css
+++ b/css-box-model/styles.css
@@ -3,8 +3,6 @@ button.language {
   background-color: lightgray;
   margin-left: 12px;
   margin-right: 12px;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 6px;
+  padding: 6px 16px;
   border-radius: 6px;
 }
