--- a/css-pseudo-classes/styles.css
+++ b/css-pseudo-classes/styles.css
@@ -4,18 +4,18 @@ button {
   font-size: 18px;
 }
 
-button:hover {
+.custom-button:hover {
   cursor: pointer;
   background-color: black;
   color: white;
 }
 
-th {
+table.striped thead > tr {
   padding: 2px;
   background-color: black;
   color: white;
 }
 
-tr:nth-child(odd) {
+table.striped tbody > tr:nth-child(odd) {
   background-color: #d2d2d2;
 }
